--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
         <input type="submit" value="Finished">
       </form>
 
-      <h2 class="hidden">So, your idea is:</h2>
-      <p class="idea-text" id="idea-text"></p>
+      <section class="hidden">
+        <h2>So, your idea is:</h2>
+        <p class="idea-text" id="idea-text"></p>
+      </section>
 
-      <h2 class="hidden">What I think:</h2>
-      <p id="response-text"></p>
+      <section class="hidden">
+        <h2>Here's my response:</h2>
+        <p id="response-text"></p>
+      </section>
 
       <button class="hidden">Try Again?</button>
     </main>
