Edit text and styling

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
       </form>
 
       <section class="hidden">
-        <h2>So, your idea is:</h2>
         <p class="idea-text" id="idea-text"></p>
       </section>
 
-      <section class="hidden">
-        <h2>Here's my response:</h2>
+      <section id="response-section" class="hidden">
         <p id="response-text"></p>
       </section>
 
