Add default dark theme

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <textarea id="idea" name="idea" type="text"></textarea>
           </p>
         </label>
-        <input type="submit" value="Finished">
+        <button type="submit">Finished</button>
       </form>
 
       <section class="hidden">
@@ -31,7 +31,7 @@
         <p id="response-text"></p>
       </section>
 
-      <button class="hidden">Try Again?</button>
+      <button id="reset" class="hidden">Try Again?</button>
     </main>
     <script src="./resources/js/main.js"></script>
   </body>
