--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Validatorinator</title>
+    <title>ValidatorInator</title>
     <link rel="stylesheet" href="./resources/css/modern-normalize.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
