Fix 'finished' button, Add favicon, edit style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ValidatorInator</title>
+    <title>Validatorinator</title>
+    <link rel="shortcut icon" type="image/ico" href="./resources/images/letter-v.ico">
     <link rel="stylesheet" href="./resources/css/modern-normalize.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
