Add links and animation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Validatorinator</title>
     <link rel="shortcut icon" type="image/ico" href="./resources/images/letter-v.ico">
     <link rel="stylesheet" href="./resources/css/modern-normalize.css">
+    <link rel="stylesheet" href="./resources/css/infinite.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
 
@@ -34,6 +35,12 @@
 
       <button id="reset" class="hidden">Try Again?</button>
     </main>
+
+    <footer>
+      <a href="https://github.com/jd-launch-school">&copy; jd-launch-school</a>
+      <a href="https://github.com/jd-launch-school/validatorinator">View the Code</a>
+    </footer>
+
     <script src="./resources/js/main.js"></script>
   </body>
 </html>
