Update style and add github links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
   <body>
     <header>
+      <a href=""></a>
       <h1>Validatorinator</h1>
+      <a href="https://github.com/jd-launch-school/validatorinator"></a>
     </header>
 
     <main>
@@ -37,8 +39,7 @@
     </main>
 
     <footer>
-      <a href="https://github.com/jd-launch-school">&copy; jd-launch-school</a>
-      <a href="https://github.com/jd-launch-school/validatorinator">View the Code</a>
+      &copy; jd-launch-school
     </footer>
 
     <script src="./resources/js/main.js"></script>
