Add URL and remove footer

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
   <body>
     <header>
-      <a href=""></a>
-      <h1>Validatorinator</h1>
+      <a href="https://github.com/jd-launch-school/"></a>
+      <div>
+        <h1>Validatorinator</h1>
+        <p class="copyright">&copy; jd-launch-school</p>
+      </div>
       <a href="https://github.com/jd-launch-school/validatorinator"></a>
     </header>
 
