More style changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="https://github.com/jd-launch-school/"></a>
       <div>
         <h1>Validatorinator</h1>
-        <p class="copyright">&copy; jd-launch-school</p>
+        <p class="copyright"></p>
       </div>
       <a href="https://github.com/jd-launch-school/validatorinator"></a>
     </header>
@@ -40,10 +40,6 @@
 
       <button id="reset" class="hidden">Try Again?</button>
     </main>
-
-    <footer>
-      &copy; jd-launch-school
-    </footer>
 
     <script src="./resources/js/main.js"></script>
   </body>
