--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <link rel="shortcut icon" type="image/ico" href="./resources/images/letter-v.ico">
     <link rel="stylesheet" href="./resources/css/modern-normalize.css">
     <link rel="stylesheet" href="./resources/css/infinite.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
 
   <body>
     <header>
-      <a href="https://github.com/jd-launch-school/"></a>
+      <a href="https://github.com/jd-launch-school/"><i class="fab fa-github"></i></a>
       <div>
         <h1>Validatorinator</h1>
         <p class="copyright"></p>
       </div>
-      <a href="https://github.com/jd-launch-school/validatorinator"></a>
+      <a href="https://github.com/jd-launch-school/validatorinator"><i class="fas fa-code"></i></a>
     </header>
 
     <main>
