--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <textarea id="idea" name="idea" type="text"></textarea>
           </p>
         </label>
-        <button type="submit">Finished</button>
+        <button id="finished" type="submit">I'm Finished.</button>
       </form>
 
       <section class="hidden">
@@ -38,6 +38,8 @@
       <section id="response-section" class="hidden">
         <p id="response-text"></p>
       </section>
+      
+      <button id="another-response" class="hidden">I want a different response.</button>
 
       <button id="reset" class="hidden">Try Again?</button>
     </main>
