Add option to get another response

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
       <section id="response-section" class="hidden">
         <p id="response-text"></p>
       </section>
-      
-      <button id="another-response" class="hidden">I want a different response.</button>
 
-      <button id="reset" class="hidden">Try Again?</button>
+      <div class="buttons">
+        <button id="another-response" class="hidden">I want a different response.</button>
+        <button id="reset" class="hidden">I have another idea.</button>
+      </div>
     </main>
 
     <script src="./resources/js/main.js"></script>
