Change button and Intro wording

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
     <main>
       <form>
-        <label for="idea">What is your idea or comment? Explain in as much detail as you like.
+        <label for="idea">Tell me your idea, feeling, or comment. Explain in as much detail as you like.
           <p>
             <textarea id="idea" name="idea" type="text"></textarea>
           </p>
         </label>
-        <button id="finished" type="submit">I'm Finished.</button>
+        <button id="finished" type="submit">Tell me your idea.</button>
       </form>
 
       <section class="hidden">
@@ -40,8 +40,8 @@
       </section>
 
       <div class="buttons">
-        <button id="another-response" class="hidden">I want a different response.</button>
-        <button id="reset" class="hidden">I have another idea.</button>
+        <button id="another-response" class="hidden">Change my response.</button>
+        <button id="reset" class="hidden">Tell me a new idea.</button>
       </div>
     </main>
 
