Add required to idea text area

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <form>
         <label for="idea">Tell me your idea, feeling, or comment. Explain in as much detail as you like.
           <p>
-            <textarea id="idea" name="idea" type="text"></textarea>
+            <textarea id="idea" name="idea" type="text" required></textarea>
           </p>
         </label>
         <button id="finished" type="submit">Tell me your idea.</button>
