Add touch icon for Android

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validatorinator</title>
     <link rel="shortcut icon" type="image/ico" href="./resources/images/letter-v.ico">
+    <link rel="shortcut icon" sizes="196x196" href="./resources/images/touch-icon/android-icon.png">
     <link rel="stylesheet" href="./resources/css/modern-normalize.css">
     <link rel="stylesheet" href="./resources/css/infinite.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
