--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
   </head>
 
   <body>
+    <div class="intro">
+      <img src="./resources/images/letter-v.png">
+      <div class="intro-text">
+        <p>Hi, I'm Val, your personal Validatorinator.</p>
+        <p>
+          I give YOU the validation and support YOU need. Currently, I'm being tailored to my creator's needs, but soon, you'll be able to fine tune me as needed.
+        </p>
+        <p>
+          To get started, click the button below and enter your idea, thought, feeling, comment, or whatever you want to tell me.
+        </p>
+      </div>
+      <button id="get-started">Get Started</button>
+    </div>
+
     <header>
       <a href="https://github.com/jd-launch-school/"><i class="fab fa-github"></i></a>
       <div>
