Add event listener to 'get started' button

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </head>
 
   <body>
-    <div class="intro">
+    <div class="intro" id="intro">
       <img src="./resources/images/letter-v.png">
       <div class="intro-text">
         <p>Hi, I'm Val, your personal Validatorinator.</p>
         <p>
-          I give YOU the validation and support YOU need. Currently, I'm being tailored to my creator's needs, but soon, you'll be able to fine tune me as needed.
+          I give YOU the validation and support YOU need. Currently, I'm being tailored to my creator's needs, but soon, you'll be able to fine tune me as needed!
         </p>
         <p>
           To get started, click the button below and enter your idea, thought, feeling, comment, or whatever you want to tell me.
